# fantasy-baseball-draft

./: .gitignore  2019spgs.csv  DraftAssistant.py  Fangraphs PlayerID to CBS.ipynb  Projection Merging and Aggregating.ipynb  README.md  adp_mar2.csv  cbs2020_keepers.csv  cbs2020_pitchers.csv  cheatSheet.txt  draft.ipynb  draft_prep.ipynb  hittersDrafting.csv  leagueSummary.txt  pitchersDrafting.csv  pyproject.toml  quickValuator.py  requirements.txt  sample_config.yml  sandbox.ipynb  spg_notebook.ipynb  statcast.ipynb  statcast.py  stats.py  testingScript.py  utils.py
BaseClasses/: BaseFantasyClasses.py  Hitter.py
CBS_fantasy_baseball/: assistant.py  development_notebook.ipynb  pitchers.py  stats.py
Fans/: all_hitters.csv  catcher.csv  centerfield.csv  designatedhitter.csv  firstbase.csv  leftfield.csv  pitcher.csv  rightfield.csv  secondbase.csv  shortstop.csv  thirdbase.csv
Files/: 2018_depthProjHitters.csv  2018_depthProjPitchers.csv  CBSHitters2018-3-27.csv  CBSHitters2018.csv  CBSHitters_4-26.csv  CBSPitchers.csv  CBSPitchers2018-3-27.csv  CBSPitchers2018.csv  CBSPitchers_4-26.csv  CBShitters.csv  FGDepthProjHitters2017-3-20.csv  FGDepthProjPitchers2017-3-20.csv  TrueTalent (3).csv  TrueTalent_may16.csv  elig_testing.csv  postDraftHitters.csv  postDraftPitchers.csv  stats (6).csv  stats-main2017hitters.csv  stats-main2017pitchers.csv  stats_omak.csv  testHitters.csv  testPitchers.csv
Projections/: FGDepthPitchers_Feb22.csv
TestFiles/: README.txt  pitchersProj.csv
data/: cbs_2021_standings.html  cbs_elig_3aug2020.csv  cbs_hitter_projections_3aug2020.csv  (+4 more)
(+95 files in other folders)
